# ml_engineer

./: .gitignore  README.md  SLNG_AR&MLassessment_original.md  asr_eval_dialects.py  asr_eval_models.py  asr_evaluation_framework.py  baseline_inference.py  baseline_inference_batch.py  baseline_inference_exp1.py  baseline_inference_exp4.py  baseline_inference_exp6.py  baseline_inference_original.py  baseline_inference_quantization.py  dialect_test.out  improved.py  model_test.out  p1.md  p1_notes.md  p1_other.md  p2.md  p2_notes.md  p3.md  p3_notes.md  performance_report.md  profiling_utils.py  pylock.toml  pyproject.toml  sample_text_inputs.json  setup.out  setup.sh  streaming_asr_system.py  streaming_asr_system_1.py  streaming_asr_system_2.py  streaming_asr_system_3.py  streaming_asr_system_4.py  streaming_asr_system_original.py  streaming_ingress.py  utils.py
logs_dev/p1/: baseline_inference.out  baseline_inference_batching.out  baseline_inference_original.out  baseline_inference_original_1.out  baseline_inference_original_1_2.out  baseline_inference_original_2.out  baseline_inference_original_2_compare_new_batching.out  baseline_inference_original_3.out  baseline_inference_original_3_2_auto.out  baseline_inference_original_4.out  baseline_inference_original_5.out  baseline_inference_original_5_2.out  baseline_inference_original_5_long.out  baseline_inference_original_5_short.out  baseline_inference_original_6.out  (+4 more)
results/: asr_evaluation.json
tables/: posthoc_dunn_models.csv  posthoc_gameshowell_dialects.csv  posthoc_gameshowell_models.csv
(+7 files in other folders)
